@@ -23,9 +23,9 @@ use lithium\action\Dispatcher;
 
 
 if (defined('nZEDb_INSTALLER') && nZEDb_INSTALLER !== false) {
-	$adapter = 'Php';
+		$adapter = 'Php';
 } else {
-	switch (true) {
+		switch (true) {
 		case extension_loaded('yenc'):
 			if (method_exists('\yenc\yEnc', 'version') &&
 				version_compare(
@@ -40,18 +40,11 @@ if (defined('nZEDb_INSTALLER') && nZEDb_INSTALLER !== false) {
 				trigger_error('Your version of the php-yenc extension is out of date and will be
 				ignored. Please update it to use the extension.', E_USER_WARNING);
 			}
-		case extension_loaded('simple_php_yenc_decode'):
-			$adapter = 'SimplePhpYencDecode';
-			break;
-		// TODO remove this when API for yEnc changes.
-		case !empty(Settings::value('apps..yydecoderpath', true)) &&
-			(strpos(Settings::value('apps..yydecoderpath', true), 'simple_php_yenc_decode') === false):
-			$adapter = 'Ydecode';
-			break;
 		default:
 			$adapter = 'Php';
 	}
 }
+
 
 app\extensions\util\Yenc::config(
 	[
@@ -66,15 +59,6 @@ app\extensions\util\Yenc::config(
 		'php' => [
 			'adapter' => 'Php'
 		],
-
-		'simple' => [
-			'adapter' => 'SimplePhpYencDecode'
-		],
-
-		// TODO remove this when API for yEnc changes.
-		'ydecode' => [
-			'adapter' => 'Ydecode'
-		],
 	]
 );
 
@@ -83,6 +67,7 @@ Filters::apply(Ypart::class,
 	function ($params, $next) {
 		return $next($params);
 	});
+
 
 
 ?>
