@@ -19,6 +19,7 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 	Fix: Wrap LITHIUM_APP_PATH and LITHIUM_LIBRARY_PATH in "if defined" check to prevent clash
 		caused by the way Lithium handles console commands when not started from inside the app
 		hierarchy.
+	Chg: Remove support for simple_php_yenc_decode extension as it doesn't support PHP 7+.
 2018-06-16 niel
 	Chg: Merging in lithium v1.2 (dev-li3-v1,2 branch) changes into dev.
 2018-06-12 niel
